--- a/src/global.css
+++ b/src/global.css
@@ -1,7 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 6rem; 
+}
 
 body {
   margin: 0;
